After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 632149 - Fill in missing MetaKeyBindingAction values
Fill in missing MetaKeyBindingAction values
Status: RESOLVED FIXED
Product: mutter
Classification: Core
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: mutter-maint
mutter-maint
Depends on:
Blocks:
 
 
Reported: 2010-10-14 14:19 UTC by Dan Winship
Modified: 2010-10-20 18:02 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fill in missing MetaKeyBindingAction values (3.54 KB, patch)
2010-10-14 14:20 UTC, Dan Winship
none Details | Review
Fill in missing MetaKeyBindingAction values (4.65 KB, patch)
2010-10-14 14:37 UTC, Dan Winship
committed Details | Review

Description Dan Winship 2010-10-14 14:19:58 UTC
While modifying Main._globalKeyPressHandler in gnome-shell, wondered
why PrintScreen was handled differently from other keys. There doesn't
seem to be any good reason, other than that mutter returns an "invalid"
MetaKeyBindingAction value for it.
Comment 1 Dan Winship 2010-10-14 14:20:00 UTC
Created attachment 172355 [details] [review]
Fill in missing MetaKeyBindingAction values
Comment 2 Dan Winship 2010-10-14 14:37:09 UTC
Created attachment 172357 [details] [review]
Fill in missing MetaKeyBindingAction values

oops, I tested it without actually saving my changes to main.js... just
adding the missing values at the end wasn't enough because there were
missing values in the middle too
Comment 3 Owen Taylor 2010-10-20 15:20:13 UTC
Review of attachment 172357 [details] [review]:

Looks fine.

::: src/include/prefs.h
@@ +197,3 @@
   META_KEYBINDING_ACTION_CYCLE_PANELS_BACKWARD,
+  META_KEYBINDING_ACTION_TAB_POPUP_SELECT,
+  META_KEYBINDING_ACTION_TAB_POPUP_CANCEL,

Hmmm, this is a "pointless" ABI change. These would have been added at the end if I knew that the ordering corresponded to an enum value. But OK - our ABI contract is pretty much non-existent.

@@ +281,3 @@
+  META_KEYBINDING_ACTION_MOVE_TO_CENTER,
+
+  META_KEYBINDING_ACTION_LAST,

Trailing enum comma is C99 and GCC extension. It's probably fine for enums that can be extended - we probably are accidentally doing so all over the place since nobody compiles GNOME with obscure Unix compilers any more. But on an element that is supposed to be always the last, I think it's just ugly.
Comment 4 Dan Winship 2010-10-20 18:02:34 UTC
removed the trailing comma. that was just a bug

Attachment 172357 [details] pushed as 9a4d168 - Fill in missing MetaKeyBindingAction values